<resources>
    <string name="app_name">Listen to everything</string>
    <string name="artist">Artist</string>
    <string name="year">Year</string>
    <string name="album_title">Album</string>
    <string name="activity_album_title">Create album</string>
    <string name="create_album">Create</string>
    <string name="cancel">Cancel</string>
    <string name="edit_multi_enter">Don\'t close after create</string>
    <string name="all">All</string>
    <string name="not_listen">Listen</string>
    <string name="listen">Listened</string>
    <string name="ask_listen">Start listen?</string>
    <string name="ask_listen_complete">Did you listen?</string>
    <string name="ask_relisten">Shall we listen to it again sometime?</string>
    <string name="ask_duplicate">We found a similar one!</string>
    <string name="sure">Saving this one too</string>
    <string name="notSure">I mistake</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="ask_delete">Delete?</string>
    <string name="list_empty">But there\'s nothing to listen to!</string>
    <string name="edit_album">Edit album</string>
    <string name="status">Status</string>
    <string name="fm_byName">Sort by name</string>
    <string name="fm_byDate">Sort by year</string>
    <string name="save">Save</string>
    <string name="fm_byRating">By rating</string>
    <string name="search_on_discogs">Find on Discogs</string>
    <string name="statistics">Already listen %s(%s%%) from %s</string>
    <string name="menu_about">About</string>
    <string name="about_text">Simple and free program for listen your musical collection.\n\n\u00a9 2025 A. Manakov</string>
    <string name="menu_backup">Backup collection</string>
    <string name="album_listen_info">Have you listened to this album %s</string>
    <string name="no_listen">You haven\'t listened to the album yet</string>
    <string name="menu_restore">Restore collection</string>
    <string name="ask_restore_title">Import</string>
    <string name="ask_restore_msg">When restoring, your current collection will be deleted. Continue?</string>
    <string name="ask_relistenAll">Are you sure?</string>
    <string name="menu_relisten_all">Relisten all</string>
</resources>