<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/album"
    android:paddingTop="5dp"
    android:paddingBottom="3dp">

    <TextView
        android:id="@+id/tvArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="2dp"
        android:layout_toStartOf="@id/imPhones"
        android:text="@string/artist"
        android:textColor="@color/lte_text_blue"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvCaption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvArtist"
        android:layout_marginVertical="3dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@id/imPhones"
        android:text="@string/album_title"
        android:textColor="@color/lte_text_blue"
        android:textSize="15sp"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/imPhones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tvListenDate"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="false"
        android:layout_centerVertical="false"
        android:layout_marginEnd="10dp"
        android:background="@drawable/outline_headphones_24"
        android:contentDescription="@string/status" />

    <TextView
        android:id="@+id/tvListenDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tvCaption"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="false"
        android:layout_marginEnd="10dp"
        android:text="@string/listen"
        android:textColor="@color/lte_pink" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true">

        <RatingBar
            android:id="@+id/rbAlbum"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize=".5"
            android:theme="@style/LTERatingBar"
            app:flow_horizontalAlign="start"
            app:layout_constraintBaseline_toTopOf="parent"
            app:layout_constraintHeight="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth="wrap_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>